# docs/swagger.json
@@ -82,7 +82,7 @@
                     {
                         "type": "string",
                         "description": "Comment ID",
-                        "name": "CommentID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -381,6 +381,64 @@
                 }
             }
         },
+        "/customevent/delete/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete a custom event based on the provided ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CustomEvents"
+                ],
+                "summary": "Delete a custom event",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Custom event ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Custom event successfully deleted",
+                        "schema": {
+                            "$ref": "#/definitions/genproto.DeleteCustomEventsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Custom event not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/customevent/get/{id}": {
             "get": {
                 "security": [
@@ -530,64 +588,6 @@
                         "description": "Custom event successfully updated",
                         "schema": {
                             "$ref": "#/definitions/genproto.UpdateCustomEventsResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid input",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Custom event not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/customevent/{id}": {
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    },
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Delete a custom event based on the provided ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "CustomEvents"
-                ],
-                "summary": "Delete a custom event",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Custom event ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Custom event successfully deleted",
-                        "schema": {
-                            "$ref": "#/definitions/genproto.DeleteCustomEventsResponse"
                         }
                     },
                     "400": {
@@ -802,7 +802,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genproto.AddMediaRequest"
+                            "$ref": "#/definitions/models.MediaReq"
                         }
                     }
                 ],
@@ -1911,23 +1911,6 @@
         "genproto.AddHistoricalEventResponse": {
             "type": "object"
         },
-        "genproto.AddMediaRequest": {
-            "type": "object",
-            "properties": {
-                "media_id": {
-                    "type": "string"
-                },
-                "memory_id": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
         "genproto.AddMediaResponse": {
             "type": "object"
         },
@@ -2500,6 +2483,20 @@
         },
         "genproto.UpdateMilestonesResponse": {
             "type": "object"
+        },
+        "models.MediaReq": {
+            "type": "object",
+            "properties": {
+                "memory_id": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
         }
     },
     "securityDefinitions": {
